--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.jarcasting</groupId>
     <artifactId>search-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0.1</version>
+    <version>1.0.3</version>
     <name>search-maven-plugin</name>
     <description>Plugin for search artifacts in Maven Central</description>
 
@@ -20,7 +20,7 @@
     </properties>
 
     <organization>
-        <name>JarCasting</name>
+        <name>JarCasting Java Libs Maven Directory</name>
         <url>https://jarcasting.com/</url>
     </organization>
     <scm>
